--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,11 @@
+:root {
+  --main-font: Raleway;
+  --accent-color: "STIX Two Text";
+  --bg-color: #f3efec;
+  --text-color: #312a4e;
+  --accent-color: #ffab6b;
+}
+
 *,
 *::before,
 *::after {
@@ -7,6 +15,9 @@
 .page {
   min-inline-size: 360px;
   margin: 0;
+  /* color: var(--text-color, #312a4e);
+  background-color: var(--bg-color, #f3efec); */
+
 }
 
 p,
