--- a/styles/style.css
+++ b/styles/style.css
@@ -49,4 +49,16 @@ figure {
 }
 
 .content-title {
+  margin: 7% 0 2.5%;
+  font-size: 30px;
 }
+
+.content__text-block {
+  font-size: 18px;
+}
+
+.content__text-block .content__paragraph:not(:last-of-type) {
+  
+}
+
+
