--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,9 @@
 .page {
   min-inline-size: 360px;
   margin: 0;
+  color: var(--text-color, #312a4e);
+  background-color: var(--bg-color, #f3efec);
+  font-family: var(--main-font, sans-serif);
 }
 
 p,
