--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,7 @@ figure {
 }
 
 .heading {
-  font-family: var(--accent-font, sans-serif);
+  font-family: var(--accent-font, serif);
   font-weight: 600;
   line-height: 0.9;
   text-align: center;
@@ -49,6 +49,7 @@ figure {
 
 .header__title {
   font-size: clamp(3.75rem, 2.5rem + 5.5556vw, 7.5rem);
+  margin-block-end: 40px;
 }
 
 .content__title {
@@ -58,10 +59,12 @@ figure {
 
 .content__text-block {
   font-size: 18px;
-  line-height: 1.1;
-  font-weight: 400;
 }
 
 .content__paragraph a {
   color: inherit;
+}
+
+.content__text-block .content__paragraph:not(:last-of-type) {
+  margin-block-end: 1.5em;
 }
