--- a/styles/style.css
+++ b/styles/style.css
@@ -68,3 +68,10 @@ figure {
 .content__text-block .content__paragraph:not(:last-of-type) {
   margin-block-end: 1.5em;
 }
+
+.content__blockquote {
+  font-style: italic;
+  line-height: 2;
+  width: 75%;
+  margin-block-end: 1.5em;
+}
