--- a/styles/style.css
+++ b/styles/style.css
@@ -111,3 +111,20 @@ figure {
   font-size: 30px;
   font-weight: 700;
 }
+
+.content__picture {
+  inline-size: 100%;
+}
+
+.content__figure {
+  position: relative;
+  inline-size: calc(100% + 10vi);
+  margin: 7% auto;
+  inset-inline-end: 5vi;
+}
+
+.content__picture-caption {
+  border-block-end: 1px solid currentColor;
+  padding: 20px;
+  text-align: center;
+}
