--- a/styles/style.css
+++ b/styles/style.css
@@ -70,13 +70,35 @@ figure {
 }
 
 .header__theme-button {
+  padding: 0;
   background-color: transparent;
   border: none;
   cursor: pointer;
+  font-family: inherit;
+  font-weight: 400;
+  line-height: 1;
+  color: currentColor;
+  position: relative;
+} 
+
+.header__theme-button:hover {
+  text-decoration: underline;
 }
 
 .header__theme-button_is-active {
   font-weight: 700;
+}
+
+.header__theme-button_is-active::after {
+  content: '';
+  display: inline-block;
+  inline-size: calc(100% + 8px);
+  block-size: 6px;
+  background-color: var(--accent-color);
+  position: absolute;
+    inset-block-start: 9px;
+    inset-inline-start: -4px;
+    z-index: -1;
 }
 
 .content__title {
