--- a/styles/style.css
+++ b/styles/style.css
@@ -22,8 +22,9 @@
 }
 
 .theme_dark {
-  color: var(--text-color, #312a4e);
-  background-color: var(--bg-color, #f3efec);
+  --bg-color: #171717;
+  --text-color: #b3b3b3;
+  --accent-color: transparent;
 }
 
 p,
@@ -240,4 +241,22 @@ button:disabled {
 
 .footer__copyright {
   font-size: 1.8rem;
+}
+
+.theme_dark .colored-text::after {
+  background-image: url(../images/pattern.svg);
+}
+
+.theme_dark .header__theme-button_is-active::after {
+  background-image: url(../images/pattern.svg);
+}
+
+.theme_dark
+  .content__text-block_type_first-lettered
+  .content__paragraph:first-of-type::first-letter {
+  border: 1px solid currentColor;
+}
+
+.theme_dark .content__list li::before {
+  background-image: url(../images/marker-dark.svg);
 }
